--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/output.css" rel="stylesheet" />
+
+    <script src="./utils/animate.js" defer></script>
+    <script src="./utils/linearInterpolation.js" defer></script>
+
+    <script src="./objects/Road.js" defer></script>
+    <script src="./objects/Sensor.js" defer></script>
+    <script src="./objects/Controls.js" defer></script>
+    <script src="./objects/Car.js" defer></script>
+
+    <script src="./index.js" defer></script>
   </head>
-  <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+  <body class="w-full h-full bg-slate-600">
+    <header
+      class="rounded-full w-[80%] bg-cyan-800 mx-auto flex justify-center items-center p-2 shadow-md hover:shadow-lg transition-all hover:bg-cyan-700 hover:cursor-pointer my-4 hover:scale-[1.01]"
+    >
+      <h1 class="text-3xl font-bold text-white">Self-driving-car</h1>
+    </header>
+    <canvas class="bg-slate-300 my-4 mx-auto"></canvas>
   </body>
 </html>
