added yellow sensors onto car

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
     <script src="./utils/animate.js" defer></script>
     <script src="./utils/linearInterpolation.js" defer></script>
-
+    <script src="./utils/getIntersection.js"></script>
     <script src="./objects/Road.js" defer></script>
     <script src="./objects/Sensor.js" defer></script>
     <script src="./objects/Controls.js" defer></script>
