styling for the header

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <head>
-    <title>Self-driving car - No libraries</title>
+    <title>Self-driving car</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="font-extrabold">
-        Self Driving car
+    <header>
+        <div class="header-container">
+            <h1 class="header">
+                Self Driving car
+            </h1>
+        </div>
     </header>
     <canvas id="myCanvas"></canvas>
     <script src="sensor.js"></script>
