--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
         </div>
     </header>
     <canvas id="myCanvas"></canvas>
+    <canvas id="networkCanvas"></canvas>
+
 
     <script src="network.js"></script>
     <script src="sensor.js"></script>
